--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,17 @@ services:
     command: uvicorn api:app --reload --workers 1 --host 0.0.0.0 --port 18000
     ports:
       - 18000:18000
+    depends_on:
+      - redis_service
+    networks:
+      - data_net
+
+  redis_service:
+    image: redis:alpine3.16
+    ports:
+      - 6379:6379
+    networks:
+      - data_net
+
+networks:
+  data_net:
