--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydantic==2.5.2
 pydantic_core==2.14.5
+redis==5.0.1
 requests==2.31.0
 rsa==4.9
 sniffio==1.3.0
